--- a/ClientApp/src/custom.scss
+++ b/ClientApp/src/custom.scss
@@ -2,11 +2,26 @@
 a {
   color: #0366d6;
 }
-
+.logo img {
+  width: 700px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+body {
+  background-color: black;
+}
 code {
   color: #e01a76;
 }
-
+p {
+  text-align: center;
+  font-size: 25px;
+  color: rgb(176, 247, 176);
+}
+.ProteinLinks {
+  text-align: center;
+}
 .btn-primary {
   color: #fff;
   background-color: #1b6ec2;
