--- a/ClientApp/src/custom.scss
+++ b/ClientApp/src/custom.scss
@@ -2,57 +2,186 @@
 a {
   color: #0366d6;
 }
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;400&family=Staatliches&display=swap');
 h1 {
   background: linear-gradient(to left, lightgreen, green, lightgreen);
   color: lightgreen;
 }
+footer {
+  font-family: 'Staatliches', cursive;
+  color: #4caf50;
+  text-align: center;
+}
 .logo img {
-  width: 700px;
+  width: 600px;
+  border-radius: 50%;
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
 body {
-  background-color: black;
+  background-color: rgb(4, 32, 13);
 }
-code {
-  color: #e01a76;
+
+h2 {
+  font-weight: 200;
+  color: green;
+  text-align: center;
+}
+.data {
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+.format {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+}
+.showRecipe {
+  display: flex;
+  justify-content: center;
+}
+.recipe {
+  width: 100%;
+  display: flex;
+  text-align: center;
+  font-size: 14px;
+  flex-direction: column;
+  align-items: center;
+  max-width: 550px;
+  width: 100%;
+  border: 1px solid lightgreen;
+}
+
+h3 {
+  font-family: 'Staatliches', cursive;
+  color: #4caf50;
+  text-align: center;
 }
 p {
+  font-family: 'Oswald', sans-serif;
   text-align: center;
-  font-size: 25px;
-  color: rgb(176, 247, 176);
+  font-size: 30px;
+  font-weight: 200;
+  color: rgb(206, 204, 204);
+}
+h4 {
+  font-family: 'Oswald', sans-serif;
+  text-align: center;
+  font-size: 22px;
+  font-weight: 200;
+  color: rgb(206, 204, 204);
 }
 
 p::selection {
   background-color: green;
   color: white;
 }
+a::selection {
+  background-color: green;
+  color: white;
+}
 .ProteinLinks {
   text-align: center;
 }
+.color {
+  font-family: 'Oswald', sans-serif;
+  display: inline-block;
+  padding: 15px 32px;
+  border: darkgreen 2px solid;
+  color: #444;
+  margin: auto;
+  border-radius: 40px;
+  transition-duration: 0.5s;
+  background-color: lightgreen;
+  font-size: 20px;
+  text-align: center;
+}
+.color2 {
+  font-family: 'Oswald', sans-serif;
+  display: inline-block;
+  padding: 16px 12px;
+  border: darkgreen 2px solid;
+  color: #444;
+  margin-top: 15;
+  border-radius: 40px;
+  transition-duration: 0.5s;
+  background-color: lightgreen;
+  font-size: 15px;
+  text-align: left;
+}
+.color3 {
+  font-family: 'Oswald', sans-serif;
+  display: inline-block;
+  padding: 16px 12px;
+  border: darkgreen 2px solid;
+  color: #444;
+  margin: auto;
+  border-radius: 40px;
+  transition-duration: 0.5s;
+  background-color: lightgreen;
+  font-size: 15px;
+  text-align: right;
+}
+.color:hover {
+  background-color: #4caf50;
+  color: white;
+}
+.color2:hover {
+  background-color: #4caf50;
+  color: whitesmoke;
+}
+
+.color3:hover {
+  background-color: #4caf50;
+  color: whitesmoke;
+}
+.myButton:hover {
+  background: linear-gradient(to bottom, #72b352 5%, #77b55a 100%);
+  background-color: #72b352;
+}
+.myButton:active {
+  position: relative;
+  top: 1px;
+}
+
+.Form {
+  font-family: 'Oswald', sans-serif;
+  font-size: 30px;
+  font-weight: 200;
+  color: lightgreen;
+  display: flex;
+  justify-content: center;
+  display: table-row;
+}
+
+label,
+input {
+  display: table-cell;
+  margin-bottom: 10px;
+}
+
+label {
+  padding-right: 10px;
+}
+
 .btn-primary {
   color: #fff;
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
-.container {
-  background: linear-gradient(to left, lightgreen, green);
-  width: 80%;
-  margin: 0 auto;
-}
+
 header {
   background: lightgreen;
+  display: flex;
   height: 100%;
 }
-header::after {
-  content: '';
-  display: table;
-  clear: both;
-}
+
 h5 a {
   float: left;
-  padding: 10px;
+  padding: 0px;
   color: #444;
   text-decoration: none;
   text-transform: uppercase;
@@ -61,49 +190,12 @@ h5 a:hover {
   color: black;
   text-decoration: none;
 }
-nav {
-  float: right;
+h5 {
+  float: left;
 }
 
 nav ul {
   margin: 0;
   padding: 0;
   list-style: none;
-}
-
-nav li {
-  display: inline-block;
-  margin-left: 70px;
-  padding-top: 23px;
-  position: relative;
-}
-
-nav a {
-  color: #444;
-  text-decoration: none;
-  text-transform: uppercase;
-}
-nav a:hover {
-  color: black;
-  text-decoration: none;
-}
-
-nav a::before {
-  content: '';
-  display: block;
-  height: 5px;
-  width: 100%;
-  background-color: #444;
-  position: absolute;
-  top: 0.5;
-  width: 0%;
-  transition: all ease-in-out 200ms;
-}
-
-nav a:hover::before {
-  width: 100%;
-}
-
-h4 a:hover::before {
-  color: #444;
 }
